get job by id
