# internal/http/handlers.go
@@ -12,34 +12,52 @@ type Handlers struct {
 	batching service.Batching
 }
 
-func (s *Handlers) GetBatchFrequency(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
+func NewHandlers(batching service.Batching) *Handlers {
+	return &Handlers{batching: batching}
 }
 
-func (s *Handlers) PostBatchFrequency(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
+func (h *Handlers) GetBatchFrequency(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"frequency": h.batching.GetFrequency().Frequency})
 }
 
-func (s *Handlers) GetBatchSize(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
+func (h *Handlers) PostBatchFrequency(c *gin.Context) {
+	var frequency api.BatchFrequency
+	if err := c.BindJSON(&frequency); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	} else {
+		h.batching.SetFrequency(frequency)
+		c.JSON(http.StatusOK, gin.H{"frequency": frequency.Frequency})
+	}
 }
 
-func (s *Handlers) UpdateBatchSize(c *gin.Context) {
-	//TODO implement me
-	panic("implement me")
+func (h *Handlers) GetBatchSize(c *gin.Context) {
+	c.JSON(http.StatusOK, gin.H{"batch size": h.batching.GetBatchSize().BatchSize})
 }
 
-func (s *Handlers) PostJob(c *gin.Context) {
+func (h *Handlers) UpdateBatchSize(c *gin.Context) {
+	var batchSize api.BatchSize
+	if err := c.BindJSON(&batchSize); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+	} else {
+		h.batching.SetBatchSize(batchSize)
+		c.JSON(http.StatusOK, gin.H{"batchSize": batchSize.BatchSize})
+	}
+}
+
+func (h *Handlers) PostJob(c *gin.Context) {
 	var jobRequest api.JobRequest
 	if err := c.BindJSON(&jobRequest); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 	} else {
-		c.JSON(http.StatusOK, gin.H{"job": s.batching.Take(jobRequest)})
+		c.JSON(http.StatusOK, gin.H{"job": h.batching.Take(jobRequest)})
 	}
 }
 
-func (*Handlers) GetJobId(c *gin.Context, id openapitypes.UUID) {
+func (h *Handlers) GetJobId(c *gin.Context, id openapitypes.UUID) {
+	job, err := h.batching.JobInfo(id)
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+	} else {
+		c.JSON(http.StatusOK, gin.H{"job": job})
+	}
 }
